[package]
name = "serde-sbif"
version = "0.1.0"
edition = "2021"
description = "A Serde-based implementation of the SBIF file format."
repository = "https://github.com/k2green/serde-sbif"
readme = "README.md"
license-file = "LICENSE"
keywords = ["sbif", "serde"]
categories = ["data-structures", "parsing", "serialization"]
authors = ["k2Green"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
err-derive = "0.3.1"
flate2 = "1.0.28"
peekread = "0.1.1"
serde = { version = "1.0.193", features = ["derive"] }
